--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .header {
@@ -38,33 +39,120 @@ a {
     display: flex;
     align-items: center;
     padding: 0 72px;
+    flex: 1;
+}
+
+.one-a {
+    width: 600px;
+    padding: 32px 0;
+}
+
+.one-b {
+    display: flex;
+    width: 800px;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
 }
 
 .heading {
     font-size: 48px;
     font-weight: 900;
+    margin-bottom: 16px;
 }
 
 .body {
     font-size: 18px;
     font-weight: 300;
     color: #E5e7eb;
+    margin-bottom: 16px;
 }
 
 .two {
     background-color: #white;
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    padding: 32px 0;
 }
 
 .three {
     background-color: #white;
+    padding: 32px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
+
+.three-a,
+.three-b,
+.three-c,
+.three-d {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.text {
+    width: 100px;
+    text-align: center;
 }
 
 .four {
     background-color: #E5E7EB;
+    padding: 96px;
+   
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+    margin-bottom: 16px;
+}
+
+.author {
+    font-size: 18px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: right;
+    margin
 }
 
 .five {
     background-color: white;
+    padding: 32px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blue-card {
+    background-color: #3882f6;
+    height: 200px;
+    width: 800px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 32px;
+    border-radius: 25px;
+}
+
+.action{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: white;
+}
+
+.sign-up{
+    font-size: 18px;
+    font-weight: 300;
+    color: white;
 }
 
 .footer {
@@ -72,5 +160,8 @@ a {
     color: #F9Faf8;
     height: 72px;
     display: flex;
+    justify-content: center;
     align-items: center;
+    font-weight: 300;
+    font-size: 12px;
 }
